--- a/Backend/api/pom.xml
+++ b/Backend/api/pom.xml
@@ -69,6 +69,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.26</version>
+		</dependency>
 	</dependencies>
 
 	<build>
