--- a/Backend/api/src/main/resources/application.properties
+++ b/Backend/api/src/main/resources/application.properties
@@ -11,4 +11,11 @@ logging.level.org.springframework.boot.autoconfigure.h2=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 #H2 Configuration
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
+
+spring.datasource.url=jdbc:mysql://localhost:3306/medhead
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.converters.preferred-json-mapper=jackson
