--- a/Backend/api/src/main/resources/application.properties
+++ b/Backend/api/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.application.name=api
 server.port=9000
 
 #Log level configuration
-logging.level.root=ERROR
-logging.level.com.medhead=INFO
-logging.level.org.springframework.boot.autoconfigure.h2=INFO
-logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+logging.level.root=DEBUG
+logging.level.com.medhead=DEBUG
+logging.level.org.springframework.boot.autoconfigure.h2=DEBUG
+logging.level.org.springframework.boot.web.embedded.tomcat=DEBUG
+logging.file.name=logs/app.log
 
 #H2 Configuration
 spring.h2.console.enabled=false
