--- a/Backend/api/src/main/resources/application.properties
+++ b/Backend/api/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.converters.preferred-json-mapper=jackson
+
+# Enable bean overriding
+spring.main.allow-bean-definition-overriding=true
