--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Grant execute permission for Maven Wrapper
+        run: chmod +x ./Backend/api/mvnw
+        
       - name: Install dependencies
         run: ./mvnw install -DskipTests
         working-directory: ./Backend/api
