--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: medhed
+          MYSQL_DATABASE: medhead
         ports:
           - 3306:3306
         options: >-
@@ -35,6 +35,10 @@ jobs:
       - name: Grant execute permission for Maven Wrapper
         run: chmod +x ./Backend/api/mvnw
         
+      - name: Compile the project
+        run: ./mvnw compile
+        working-directory: ./Backend/api
+
       - name: Install dependencies
         run: ./mvnw install -DskipTests
         working-directory: ./Backend/api
