--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Grant execute permission for Maven Wrapper
+        run: chmod +x ./Backend/api/mvnw
+        
       - name: Build backend JAR
         run: ./mvnw package -DskipTests
         working-directory: ./Backend/api
